# jarvis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml.example  jarvis.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: api.md  architecture.md  configuration.md  providers.md
installer/linux/: AppImageBuilder.yml
installer/windows/: installer.nsi
specs/001-jarvis-voice-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-preprocessor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-settings-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-obsidian-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pluggable-agent-backends/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/agents/: base.py  claude_agent.py  codex_agent.py  external_http_agent.py  gemini_agent.py  health_monitor.py  hermes_agent.py  ollama_agent.py
src/api/: server.py
src/audio/: hotword.py  microphone.py  transcriber.py  tts.py
src/cloud/: auth.py  billing.py  oauth.py  sync.py
src/config/: keychain.py  settings.py
src/memory/: audit.py  graph.py  profile.py  session.py  vault.py  vault_context.py  vault_search.py  vault_writer.py
src/output/: approval.py  permissions.py
src/plugins/: mcp_manager.py  skills_manager.py
src/processing/: cache.py  classifier.py  preprocessor.py  router.py
src/storage/: backend_store.py  db.py  models.py  profile_store.py  provider_store.py  usage_store.py
src/ui/: approval_dialog.py  dashboard.py  graph_view.py  settings_panel.py  tray.py  (+1 more)
(+107 files in other folders)
