[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS — Voice-First AI Assistant for Desktop"
requires-python = ">=3.11"
dependencies = [
    # Processing & routing
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-generativeai>=0.7.0",
    "httpx>=0.27.0",
    # API / IPC
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "keyring>=25.3.0",
    # Cloud
    "supabase>=2.7.0",
    "stripe>=10.0.0",
    # Utilities
    "PyYAML>=6.0.2",
    "structlog>=24.4.0",
    "numpy>=1.26.0",
    "pybreaker>=1.2.0",
]

[project.optional-dependencies]
# Audio pipeline — requires Python 3.11 (tflite-runtime wheel constraint)
# Install with: uv sync --extra audio  (on a Python 3.11 runtime)
audio = [
    "openwakeword>=0.6.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
# Desktop UI
ui = [
    "PyQt6>=6.7.0",
    "pystray>=0.19.5",
    "Pillow>=10.4.0",
]
# Linux keychain backend
linux = [
    "secretstorage>=3.3.3",
]

[project.scripts]
jarvis = "jarvis.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/ui/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]
